# gaojijishiben

./: .gitignore  BUILD_GUIDE.md  FEATURES.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.monkeycode/specs/advanced-notepad/: design.md  requirements.md  tasklist.md
AdvancedNotepad/: AdvancedNotepad.csproj  App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: lib.rs  main.rs  window.rs
src/lib/components/: Editor.svelte  SettingsPanel.svelte  Toolbar.svelte
src/lib/parser/: evaluator.ts  lexer.ts  parser.ts  pretty-printer.ts  roundtrip.ts  serializer.ts
src/lib/stores/: editor.ts  settings.ts  theme.ts
src/lib/types/: editor.ts  parser.ts  settings.ts
src/lib/utils/: image-handler.ts  storage.ts
